Environment variables manipulation

--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,21 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {},
 
     "autoload": {
         "psr-4": {
            "Hyper\\" : ["src"]
         }
+    },
+
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/JoaoGabrielOliveira/colored_console"
+        }
+    ],
+
+    "require": {
+        "hypercode/colored_console": "dev-main"
     }
 }
